@@ -28,7 +28,8 @@ public class Technicien implements UserDetails {
     private String username;
     private String password;
     private String email;
-    private String role;
+    @Enumerated(EnumType.STRING)
+    private Role role;
     private String specialisation;
 
     @OneToMany(mappedBy = "technicienAssigne")
@@ -36,7 +37,7 @@ public class Technicien implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.singletonList(new SimpleGrantedAuthority(role));
+        return List.of(new SimpleGrantedAuthority(role.name()));
     }
 
     @Override
